src/Domain/Compiler/Tests/Expression/IntegerLiteral/DecimalLiteral/__Baselines__/DecimalLiteral_S32Overflow-StashIr.error
error: Integral expression of type 'u32 2147483648' exceeds maximum value of type 's32'.
--> main.hs:7:16
  | 
7 |         return 2147483648;}}
  |                ^^^^^^^^^^
